# youtube-downloader-cli

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: day1-backend-setup.md  day2-download-api.md  day3-websocket.md  day4-frontend-ui.md  day5-frontend-logic.md  day6-integration-deployment.md  phase1-authentication.md
alembic/: env.py
alembic/versions/: e5a44f8fb3d4_initial_migration_users_credit_.py
docs/: 01-작업-계획서.md  02-프로젝트-개요.md  03-기술-스택.md  04-개발-가이드.md  05-사용자-가이드.md  06-Phase3-고급기능-구현가이드.md  07-Phase4-테스트및배포-가이드.md  08-FFmpeg-자동화-및-UI-개선.md
docs/web/: 01-웹-인터페이스-작업-계획서.md  02-API-명세서.md  03-UI-UX-디자인-명세서.md  04-개발-로드맵.md  06-배포-가이드.md  07-크레딧-시스템-구현-계획.md  README.md  개발일지-2026-01-18.md
src/youtube_downloader/: __init__.py  cli.py  config.py  downloader.py  models.py  utils.py
src/youtube_downloader/web/: __init__.py  api.py  app.py  auth.py  auth_api.py  credit_api.py  database.py  models.py  models_db.py  tasks.py  websocket.py
src/youtube_downloader/web/static/: app.js  index.html  pricing.html  style.css  test_ws.html
tests/: conftest.py  test_downloader.py
